--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +24,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# chrphb-quarto-util\n",
+    "# chrphb_quarto_util\n",
     "\n",
-    "> Tools to work with Quarto"
+    "> An Util Library to work with Quarto"
    ]
   },
   {
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +77,7 @@
        "2"
       ]
      },
-     "execution_count": null,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,17 +88,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from chrphb_quarto_util.core import create_post_from_template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! mkdir /tmp/templates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! mkdir /tmp/posts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! touch /tmp/templates/index.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-07-30-test\n",
+      "Directory created 2024-07-30-test\n",
+      "mardi 30 juillet 2024\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_post_from_template('/tmp/templates','/tmp/posts','test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/tmp/posts:\n",
+      "total 4\n",
+      "drwxrwxr-x 2 chris chris 4096 juil. 30 23:40 2024-07-30-test\n",
+      "\n",
+      "/tmp/posts/2024-07-30-test:\n",
+      "total 0\n",
+      "-rw-rw-r-- 1 chris chris 0 juil. 30 23:40 index.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls -lRt /tmp/posts"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
